<resources>
    <string name="app_name">Baboon</string>

    <string name="action_settings">تنظیمات</string>
    <string name="html_css">HTML / CSS</string>
    <string name="node_js">Node.js</string>
    <string name="js">JavaScript</string>
    <string name="angularjs">AngularJS</string>
    <string name="vagrant">Vagrant</string>
    <string name="laravel">Laravel</string>
    <string name="jquery">jQuery</string>
    <string name="php">PHP</string>
    <string name="bootstrap">Bootstrap</string>
    <string name="ruby_on_rails">Ruby on Rails</string>
    <string name="telegram">تلگرام</string>
    <string name="Communicate">ارتباطات</string>

    <string name="no_more_post">مطلبی یافت نشد.</string>
    <string name="first_load">درحال دریافت اطلاعات</string>
    <string name="baboon">baboon</string>
    <string name="dev_gmail">ahmadgivekesh@gmail.com</string>
    <string name="no_network">عدم دسترسی به شبکه (آفلاین)</string>
    <string name="home">صفحه اصلی</string>
    <string name="refresh">به روزرسانی</string>
    <string name="contact">تماس با ما</string>
    <string name="email_chooser">ارسال ایمیل</string>
    <string name="search">جستجو</string>
    <string name="not_found">مطلب مورد نظر یافت نشد.</string>
    <string name="full_article">ادامه</string>
    <string name="express">Express</string>
    <string name="symfony">Symfony</string>

    <string name="try_again">دریافت مجدد اطلاعات</string>
    <string name="connection_failed">مشکل در برقراری ارتباط</string>

    <string name="instagram_url">https://www.instagram.com/baboon.ir</string>
    <string name="instagram_intent_url">http://instagram.com/_u/baboon.ir</string>
    <string name="instagram_package">com.instagram.android</string>
    <string name="instagram">اینستاگرم</string>

    <string name="new_version_title">نسخه جدید</string>
    <string name="new_version_content">نسخه %1$s در %2$s منتشر شد.</string>
    <string name="comment_show">دریافت و نمایش دیدگاه ها</string>
    <string name="no_comment">دیدگاهی یافت نشد.</string>

    <string name="pref_font">انتخاب فونت</string>
    <string name="pref_posts_per_page">تعداد پست ها</string>
    <string name="pref_ui">انتخاب رابط کاربری</string>

    <string name="setting">تنظیمات</string>
    <string name="notification_new_post">آگاه سازی از پست جدید</string>
    <string name="notifications_new_version">آگاه سازی از ورژن جدید</string>
    <string name="general_settings">تنظیمات عمومی</string>
    <string name="notification_settings">تنظیمات آگاه سازی ها</string>

    <string name="ok">تایید</string>
    <string name="cancel">لغو</string>
    <string name="off">غیرفعال</string>
    <string name="on">فعال</string>
    <string name="offline_mode">نمایش مطالب به صورت آفلاین</string>

    <string name="market_myket">مایکت</string>
    <string name="market_jhoobin">ژوبین</string>
    <string name="market_bazaar">کافه بازار</string>
    <string name="pref_theme">انتخاب تم</string>

    <string name="channel_id_new_post">baboon_new_post_channel</string>
    <string name="channel_id_new_version">baboon_new_version_channel</string>
    <string name="channel_new_post">پست جدید</string>
    <string name="channel_new_version">نسخه جدید</string>
    <string name="baboon_fa">بابــون</string>
    <string name="tutorials">آموزش ها</string>
    <string name="more">بیشتر ...</string>
    <string name="less">کمتر ...</string>
</resources>
